--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://yaswanth-sai-s.github.io/totalitycorp-frontend-challenge",
+  "homepage": "http://yaswanth-sai-s.github.io/",
   "name": "totalitycorp-frontend-challenge",
   "version": "0.1.0",
   "private": false,
